# graduate_work

./: .gitignore
auth/: .example.env  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 18f6a903a2e2_alter_userrole.py  1de719570c73_add_session_partitions.py  26d565125d73_add_session_partitions.py  66a2aea65ba7_update_user_tabke.py  a774591f5108_initial_migration.py  ab2aab9e78f9_partition_session.py  f59c9a35c3d5_initial_migration.py
auth/src/: .example.local.env  .example.prod.env  main.py
billing/: .dockerignore  .example.env  Dockerfile  Makefile  docker-compose.yml  filebeat.yml  pyproject.toml
billing/alembic/versions/: 8d607f3717ad_initial_migration.py  a3aaed370678_initial_migration.py  d6012d013b60_initial_migration.py
billing/src/: main.py
billing/src/api/v1/: router.py
billing/src/api/v1/routes/: billing.py  subscription.py  tariff.py  yookassa.py
billing/src/api/v1/schemas/: schemas.py  subscription.py  tariff.py  transaction.py
billing/src/clients/: client.py
billing/src/clients/auth/: client.py
billing/src/logger/: __init__.py  logger.py
billing/src/models/: __init__.py  models.py  types.py
billing/src/repository/: base.py  subscription.py  tariff.py  transaction.py
billing/src/services/: billing.py
billing/src/services/billing/: yookassa.py
billing/src/services/billing/dto/: amount.py  callback.py  confirmation.py  payment.py  payment_method.py  recipient.py
billing/src/services/billing/schemas/: schemas.py
billing/src/services/producer/: base.py  kafka.py  schemas.py
billing/src/services/schemas/: schemas.py
billing/src/services/yookassa/: service.py
billing/src/services/yookassa/dto/: amount.py  callback.py  confirmation.py  payment.py  payment_method.py  recipient.py  refund.py  types.py
billing/src/settings/: api.py  jwt.py  kafka.py  logger.py  yookassa.py
content/: .example.env  .gitignore  Dockerfile  Makefile  docker-compose.yml  filebeat.yml  pyproject.toml
content/src/: content_db.py  main.py
infrastructure/: .gitignore  docker-compose.yml  local-docker-compose.yml
notifications/: .example.env  Dockerfile  Makefile  docker-compose.yml  filebeat.yml  pyproject.toml
notifications/src/: main.py
(+109 files in other folders)
