[tool.poetry]
name = "billing"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
sqlalchemy = "~2.0.36"
pydantic = "~2.9.2"
pydantic-settings = "~2.6.1"
alembic = "~1.14.0"
fastapi = "~0.115.5"
uvicorn = "~0.32.0"
asyncpg = "~0.30.0"
orjson = "~3.10.11"


[tool.poetry.group.dev.dependencies]
ruff = "0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    # Исключенные директории и файлы для линтинга
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Общие настройки
line-length = 88  # Максимальная длина строки
indent-width = 4   # Ширина отступа в пробелах
target-version = "py312"  # Целевая версия Python

[tool.ruff.lint]
# Настройки линтинга
select = [
    # Выбор правил линтинга
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I",  # isort
]

ignore = []  # Игнорируемые правила
allowed-confusables = [
    # Разрешенные похожие символы для русского алфавита
    "у", "е", "г", "х", "а", "р", "о", "с", "б", 
    "У", "К", "Е", "Н", "З", "Х", "В", "А", "Р", 
    "О", "С", "М", "Т", "Ь"
]
fixable = ["ALL"]  # Все ошибки можно исправить
unfixable = []     # Ошибки, которые нельзя исправить
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"  # Регулярное выражение для "пустых" переменных

[tool.ruff.format]
# Настройки форматирования
quote-style = "double"  # Стиль кавычек (двойные)
indent-style = "space"   # Стиль отступа (пробелы)
skip-magic-trailing-comma = false  # Использовать магическую завершающую запятую
line-ending = "auto"  # Конец строки (автоматически)
docstring-code-format = false  # Форматировать код в docstring
docstring-code-line-length = "dynamic"  # Длина строки кода в docstring (динамически)